--- a/plantillas/templates/gaseosas.html
+++ b/plantillas/templates/gaseosas.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estiloslineaproductos.css">
-    <title>Línea de Café</title>
+    <title>Línea de Gaseosas</title>
 </head>
 <body>
     <main class="contenedor">
@@ -25,13 +25,13 @@
         </div>
         <div class="contenido">
             <div class="titulo">
-                <h2>Línea de Café</h2>
+                <h2>Línea de Gaseosas</h2>
             </div>
             <div class="filauno">
-                <img class="cafe" src="../img/IMG_0556.png" alt="">
-                <img class="cafe" src="../img/IMG_0556.png" alt="">
-                <img class="cafe" src="../img/IMG_0556.png" alt="">
-                <img class="cafe" src="../img/IMG_0556.png" alt="">
+                <img src="../img/gaseosas2.png" alt="">
+                <img src="../img/gaseosas2.png" alt="">
+                <img src="../img/gaseosas2.png" alt="">
+                <img src="../img/gaseosas2.png" alt="">
             </div>
             <div class="description">
                 <h2>Descripción</h2>
