--- a/plantillas/templates/inicio.html
+++ b/plantillas/templates/inicio.html
@@ -28,19 +28,20 @@
                 <h2>Línea de Productos</h2>
             </div>
             <div class="filauno">
-                <img src="../img/agua.png" alt="">
-                <img src="../img/cafe.png" alt="">
-                <img src="../img/fritura.png" alt="">
-                <img src="../img/gaseosa.png" alt="">
+                <a href="../templates/agua.html"><img src="../img/agua.png" alt=""></a>
+                <a href="../templates/cafe.html"><img src="../img/cafe.png" alt=""></a>
+                <a href="../templates/frituras.html"><img src="../img/fritura.png" alt=""></a>
+                <a href="../templates/gaseosas.html"><img src="../img/gaseosa.png" alt=""></a>
             </div>
             <div class="filados">
+                <a href="../templates/jugos.html"> <img src="../img/jugos.png" alt=""></a>
+                <a href="../templates/panaderia.html"><img src="../img/panaderia.png" alt=""></a>
                
-                <img src="../img/jugos.png" alt="">
-                <img src="../img/panaderia.png" alt="">
+                
             </div>
         </div>
         <div class="piedepagina">
-            <p>Derechos resevados wwww.gaseosaslacigarra.co</p>
+            <p>Copyright © 2021 Gaseosas la Cigarra</p>
         </div>
     </main>
 </body>
