--- a/plantillas/templates/jugos.html
+++ b/plantillas/templates/jugos.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estiloslineaproductos.css">
-    <title>Línea de Gaseosas</title>
+    <title>Línea de Jugos</title>
 </head>
 <body>
     <main class="contenedor">
@@ -25,33 +25,33 @@
         </div>
         <div class="contenido">
             <div class="title">
-                <h2>Línea de Gaseosas</h2>
+                <h2>Línea de Jugos</h2>
             </div>
             <div class="filauno">
-                <!-- <div>
-                    <img class="imggaseosas" src="../img/gaseosas2.png" alt="">
-                    <div>
-                        <button type="button" class="mas">+</button><input type="text"><button type="button" class="menos">-</button>
-                    </div>
-                </div> -->
                 <div>
-                    <img class="imggaseosas" src="../img/gaseosas2.png" alt="">
+                    <img class="imgjugos" src="../img/jugos.png" alt="">
                     <div>
                         <button type="button" class="mas">+</button><input type="text"><button type="button" class="menos">-</button>
                     </div>
                 </div>
                 <div>
-                    <img class="imggaseosas" src="../img/gaseosas3.png" alt="">
+                    <img class="imgjugos" src="../img/jugos.png" alt="">
                     <div>
                         <button type="button" class="mas">+</button><input type="text"><button type="button" class="menos">-</button>
                     </div>
                 </div>
-                <!-- <div>
-                    <img class="imggaseosas" src="../img/gaseosas2.png" alt="">
+                <div>
+                    <img class="imgjugos" src="../img/jugos.png" alt="">
                     <div>
                         <button type="button" class="mas">+</button><input type="text"><button type="button" class="menos">-</button>
                     </div>
-                </div> -->
+                </div>
+                <div>
+                    <img class="imgjugos" src="../img/jugos.png" alt="">
+                    <div>
+                        <button type="button" class="mas">+</button><input type="text"><button type="button" class="menos">-</button>
+                    </div>
+                </div>
                 
                 
             </div>
