--- a/plantillas/templates/cafe.html
+++ b/plantillas/templates/cafe.html
@@ -17,21 +17,43 @@
             <nav class="navegacion">
                 <ul>
                     <li><a href="#">Inicio</a></li>
-                    <li><a href="#">Productos</a></li>
+                    <li><a href="../templates/inicio.html">Categorias</a></li>
                     <li><a href="#">Contactos</a></li>
                     <li><a href="#"><i class="far fa-user"></i>&nbsp; Login</a></li>
                 </ul>
             </nav>
         </div>
         <div class="contenido">
-            <div class="titulo">
+            <div class="title">
                 <h2>Línea de Café</h2>
             </div>
             <div class="filauno">
-                <img class="cafe" src="../img/IMG_0556.png" alt="">
-                <img class="cafe" src="../img/IMG_0556.png" alt="">
-                <img class="cafe" src="../img/IMG_0556.png" alt="">
-                <img class="cafe" src="../img/IMG_0556.png" alt="">
+                <div>
+                    <img class="imgcafe" src="../img/IMG_0556.png" alt="">
+                    <div>
+                        <button type="button" class="mas">+</button><input type="text"><button type="button" class="menos">-</button>
+                    </div>
+                </div>
+                <div>
+                    <img class="imgcafe" src="../img/IMG_0556.png" alt="">
+                    <div>
+                        <button type="button" class="mas">+</button><input type="text"><button type="button" class="menos">-</button>
+                    </div>
+                </div>
+                <div>
+                    <img class="imgcafe" src="../img/IMG_0556.png" alt="">
+                    <div>
+                        <button type="button" class="mas">+</button><input type="text"><button type="button" class="menos">-</button>
+                    </div>
+                </div>
+                <div>
+                    <img class="imgcafe" src="../img/IMG_0556.png" alt="">
+                    <div>
+                        <button type="button" class="mas">+</button><input type="text"><button type="button" class="menos">-</button>
+                    </div>
+                </div>
+                
+                
             </div>
             <div class="description">
                 <h2>Descripción</h2>
@@ -40,7 +62,7 @@
             </div>
         </div>
         <div class="piedepagina">
-            <p>Derechos resevados wwww.gaseosaslacigarra.co</p>
+            <p>Copyright © 2021 Gaseosas la Cigarra</p>
         </div>
     </main>
 </body>
