--- a/plantillas/templates/categorias.html
+++ b/plantillas/templates/categorias.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/estilosinicio.css">
+    <link rel="stylesheet" href="../css/estilos.css">
     <title>Inicio</title>
 </head>
 <body>
@@ -17,7 +17,8 @@
             <nav class="navegacion">
                 <ul>
                     <li><a href="#">Inicio</a></li>
-                    <li><a href="#">Categorias</a></li>
+                    <li><a href="#">Reseña</a></li>
+                    <li><a href="#">Nosotros</a></li>
                     <li><a href="../templates/login.html"><i class="far fa-user"></i>&nbsp; Login</a></li>
                 </ul>
             </nav>
@@ -31,20 +32,10 @@
                 <a href="../templates/cafe.html"><img src="../img/cafe.png" alt=""></a>
                 <a href="../templates/frituras.html"><img src="../img/fritura.png" alt=""></a>
                 <a href="../templates/gaseosas.html"><img src="../img/gaseosa.png" alt=""></a>
-                <a href="../templates/jugos.html"> <img src="../img/jugos.png" alt=""></a>
-                <a href="../templates/panaderia.html"><img src="../img/panaderia.png" alt=""></a>
             </div>
             <div class="filados">
-
-                <div class="subtitulo">
-                    <h2>Nosotros</h2>
-                </div>
-                <div class="parrafo">
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque voluptas voluptates beatae alias! Voluptate dolorum quidem, cumque suscipit facere corporis ex alias similique, molestiae optio aliquam esse, accusamus officia? Consequatur!Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque voluptas voluptates beatae alias! Voluptate dolorum quidem, cumque suscipit facere corporis ex alias similique, molestiae optio aliquam esse, accusamus officia? Consequatur!</p>
-                </div>
-                <div class="imagen">
-                    <img src="../img/lacigarralocal.jpg" alt="">
-                </div>    
+                <a href="../templates/jugos.html"> <img src="../img/jugos.png" alt=""></a>
+                <a href="../templates/panaderia.html"><img src="../img/panaderia.png" alt=""></a>
                
                 
             </div>
