--- a/plantillas/css/estilos.css
+++ b/plantillas/css/estilos.css
@@ -35,6 +35,7 @@ body{
     align-items: center;
     
     height: auto;
+    
    
 }
 
@@ -57,6 +58,7 @@ body{
     display: flex;
     align-items: center;
     border-radius: 10px;
+    
 
 }
 
@@ -70,13 +72,14 @@ body{
 .navegacion ul li{
     display: inline-block;
     list-style-type: none;
-    
-    
-
 }
 
 .navegacion ul li:last-child{
     margin-left: auto;
+}
+
+.navegacion ul .item{
+    display: none;
 }
 
 
@@ -103,6 +106,7 @@ body{
     grid-gap: 20px;
     background-color:#e3deeb5f ;
     border-radius: 10px;
+    
 }
 
 .contenedor .contenido .filauno{
@@ -176,7 +180,7 @@ body{
     
     width: 100%;
     height: 100vh;
-    border: 1px solid yellow;
+    /* border: 1px solid yellow; */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -184,46 +188,111 @@ body{
 }
 
 .contenedorlogin .zonalogin{
+    width: 20%;
     background-color: #e3deeb75;
-    border: 1px solid;
-    padding: 5px;
+    /* border: 1px solid; */
+    padding: 20px;
     display: grid;
     grid-template-columns: repeat(1,1fr);
     grid-template-rows: repeat(3,auto);
     grid-template-areas: "titulo"
                          "section"
                          "pie";
-    width: ;  
-    
+    height: auto;
+    grid-gap: 10px;
+    border-radius: 10px;
+ 
 }
 
 .contenedorlogin .zonalogin .title{
     grid-area: titulo;
-    margin: auto;
+    margin: 10px auto;
+    width: 100%;
+}
+
+.contenedorlogin .zonalogin .title h2{
+    color: #fff;
+    width: 100%;
+    text-align: center;
+    font-size: 1.8em;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    text-shadow: 1px 1px 1px #3d1868;
 }
 
 .contenedorlogin .zonalogin .cuerpo{
     grid-area: section;
-    margin: auto;
+    display: flex;
+    
+    
+}
+
+
+.contenedorlogin .zonalogin .useradmin{
+    grid-area: pie;
+    text-align: right;
+    width: 100%;
+}
+
+.contenedorlogin .zonalogin .useradmin h5 a{
+    text-decoration: none;
+    color: #fff;
+    text-shadow: 1px 1px 1px #3d1868;
 }
 
 .contenedorlogin .zonalogin .cuerpo form{
-
+    /* border: 1px solid; */
+    width: 100%;
+    height: auto;
+    margin: auto;
+    padding: 20px;
+    
 }
 
 .contenedorlogin .zonalogin .cuerpo form label{
     display: block;
-
-    border: 1px solid;
-    
+    width: 100%;
+    height: auto;
+    padding: 10px;
+    font-size: 1.2em;
+    color: #fff;
+    text-shadow: 1px 1px 1px #3d1868;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 .contenedorlogin .zonalogin .cuerpo form input{
     display: block;
-
-    border: 1px solid;
-    
+    width: 100%;
+    height: 35px;
+    margin: auto;
+    font-size: 1.2em;
+    border-radius: 8px;
+    border: none;
+    padding:4px;   
 }
+
+.contenedorlogin .zonalogin .cuerpo form .boton{
+    width: 25%;
+    height: auto;
+    margin: auto;
+    padding: 10px;
+    margin-top: 10px;
+    margin-bottom: 20px;
+    background-color: #3d1868;
+    border-radius: 8px;
+    border:none;
+    color: #fff;
+
+}
+
+.contenedorlogin .zonalogin .cuerpo form .boton:active{
+    background-color: #4b3677;
+}
+
+.pie p{
+    color: #fff;
+    text-align: center;
+}
+
 /* 
 label{
     display: block;
@@ -235,11 +304,6 @@ input{
 
 
 
-
-.contenedorlogin .zonalogin .useradmin{
-    grid-area: pie;
-    text-align: right;
-}
 
 
 
