--- a/plantillas/templates/frituras.html
+++ b/plantillas/templates/frituras.html
@@ -17,7 +17,7 @@
             <nav class="navegacion">
                 <ul>
                     <li><a href="#">Inicio</a></li>
-                    <li><a href="../templates/inicio.html">Categorias</a></li>
+                    <li><a href="../templates/categorias.html">Categorias</a></li>
                     <li><a href="#">Contactos</a></li>
                     <li><a href="#"><i class="far fa-user"></i>&nbsp; Login</a></li>
                 </ul>
