--- a/plantillas/templates/cafe.html
+++ b/plantillas/templates/cafe.html
@@ -12,14 +12,14 @@
     <main class="contenedor">
         <div class="cabecera">
             <div class="logo">
-                <img src="../img/lacigarra.png" alt="">
+                <img src="../img/lacigarranavidad.png" alt="">
             </div>
             <nav class="navegacion">
                 <ul>
-                    <li><a href="#">Inicio</a></li>
+                    <li><a href="../templates/inicio.html">Inicio</a></li>
                     <li><a href="../templates/categorias.html">Categorias</a></li>
                     <li><a href="#">Contactos</a></li>
-                    <li><a href="#"><i class="far fa-user"></i>&nbsp; Login</a></li>
+                    <li><a href="../templates/login.html"><i class="far fa-user"></i>&nbsp; Login</a></li>
                 </ul>
             </nav>
         </div>
