--- a/plantillas/templates/frituras.html
+++ b/plantillas/templates/frituras.html
@@ -12,7 +12,7 @@
     <main class="contenedor">
         <div class="cabecera">
             <div class="logo">
-                <img src="../img/lacigarra.png" alt="">
+                <img src="../img/lacigarranavidad.png" alt="">
             </div>
             <nav class="navegacion">
                 <ul>
