--- a/plantillas/templates/inicio.html
+++ b/plantillas/templates/inicio.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Rakkas&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilosinicio.css">
     <title>Inicio</title>
@@ -12,12 +15,12 @@
     <main class="contenedor">
         <div class="cabecera">
             <div class="logo">
-                <img src="../img/lacigarra.png" alt="">
+                <img src="../img/lacigarranavidad.png" alt="">
             </div>
             <nav class="navegacion">
                 <ul>
-                    <li><a href="#">Inicio</a></li>
-                    <li><a href="#">Categorias</a></li>
+                    <!-- <li><a href="#">Inicio</a></li> -->
+                    <li><a href="../templates/categorias.html">Categorias</a></li>
                     <li><a href="../templates/login.html"><i class="far fa-user"></i>&nbsp; Login</a></li>
                 </ul>
             </nav>
