--- a/plantillas/templates/login.html
+++ b/plantillas/templates/login.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilos.css">
     <title>Inicio</title>
@@ -12,14 +13,14 @@
     <main class="contenedor">
         <div class="cabecera">
             <div class="logo">
-                <img src="../img/lacigarra.png" alt="">
+                <img src="../img/lacigarranavidad.png" alt="">
             </div>
             <nav class="navegacion">
                 <ul>
-                    <li><a href="../templates/categorias.html">Inicio</a></li>
-                    <li><a href="../templates/categorias.html">Categorias</a></li>
+                    <li><a href="../templates/inicio.html"><i class="far fa-home-alt"></i>&nbsp; Inicio</a></li>
+                    <!-- <li><a href="../templates/categorias.html">Categorias</a></li>
                     <li><a href="#">Contactos</a></li>
-                    <span hidden="true"></span>
+                    <span hidden="true"></span> -->
                     <!-- <li><a href="#"><i class="far fa-user"></i>&nbsp; Login</a></li> -->
                 </ul>
             </nav>
@@ -37,9 +38,11 @@
                     <label for="">Contraseña</label>
                     <input type="text" placeholder="Ingrese Password">
                     <input class="boton" type="submit" value="Iniciar">
+                    <label class="linkrecuperarpass" for=""><a href="">¿Olvido su contraseña?</a></label>
                 </form>
             </div>
             <div class="useradmin">
+                <h5><a href="">Crear<br>Cuenta</a></h5>
                 <h5><a href="">Usuario Administrador</a></h5>
             </div>
         </div>
