--- a/plantillas/css/estilos.css
+++ b/plantillas/css/estilos.css
@@ -179,11 +179,13 @@ body{
 .contenedorlogin{
     
     width: 100%;
-    height: 100vh;
+    height: auto;
     /* border: 1px solid yellow; */
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-top: 10px;
+    margin-bottom: 100px;
 
 }
 
@@ -229,14 +231,29 @@ body{
 
 .contenedorlogin .zonalogin .useradmin{
     grid-area: pie;
-    text-align: right;
     width: 100%;
+    display: flex;
+    justify-content: space-around;
 }
-
-.contenedorlogin .zonalogin .useradmin h5 a{
-    text-decoration: none;
+.contenedorlogin .zonalogin .useradmin h5{
+    width: 40%;
+    height: 50px;
     color: #fff;
     text-shadow: 1px 1px 1px #3d1868;
+    display: flex;
+    margin: auto;
+    
+}
+.contenedorlogin .zonalogin .useradmin h5 a{
+    text-decoration: none;
+    width: 100%;
+    color: #fff;
+    display: block;
+    padding: 8px;
+    text-align: center;
+    background-color:#3d1868;
+    border-radius: 10px;
+
 }
 
 .contenedorlogin .zonalogin .cuerpo form{
@@ -273,15 +290,26 @@ body{
 .contenedorlogin .zonalogin .cuerpo form .boton{
     width: 25%;
     height: auto;
-    margin: auto;
     padding: 10px;
-    margin-top: 10px;
+    margin-top: 20px;
     margin-bottom: 20px;
     background-color: #3d1868;
     border-radius: 8px;
     border:none;
     color: #fff;
 
+}
+
+.contenedorlogin .zonalogin .cuerpo form .linkrecuperarpass{
+    text-align: center;
+}
+
+
+.contenedorlogin .zonalogin .cuerpo form .linkrecuperarpass a{
+    color: #fff;
+    text-decoration: none;
+    text-align: center;
+    
 }
 
 .contenedorlogin .zonalogin .cuerpo form .boton:active{
