--- a/plantillas/css/estilosinicio.css
+++ b/plantillas/css/estilosinicio.css
@@ -154,18 +154,41 @@ body{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-
-    
+    background-color: #e3deeb75;
+    width: 75%;
+    margin: auto;
+    padding: 50px;
+    border-radius: 10px;
     
     
 }
 
 .filados .subtitulo{
-    width: 20%;
+    width: 30%;
+    margin: auto;
+    
+}
+
+.filados .subtitulo h2{
+    text-align: center;
+    font-size: 2em;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    color: #7b29d8;
+    text-shadow: 1px 1px 1px #fff;
 }
 
 .filados .parrafo{
-    width: 80%;
+    width: 60%;
+    margin:auto;
+}
+
+.filados .parrafo p{
+    color:#3d1868;
+    text-align: center;
+    font-size: 1.4em;
+    line-height: 35px;
+    text-shadow: 1px 1px 1px #fff;
+    font-family: 'Rakkas', cursive;
 }
 
 .filados .imagen{
@@ -173,9 +196,10 @@ body{
 }
 
 .filados .imagen img{
-    width: 30%;
+    width: 40%;
     height: auto;
-    border-radius: 80px;
+    border-radius: 150px;
+    box-shadow: 1px 1px 10px 1px #3d1868;
 }
 
 .contenedor .piedepagina{
