--- a/plantillas/templates/categorias.html
+++ b/plantillas/templates/categorias.html
@@ -12,13 +12,13 @@
     <main class="contenedor">
         <div class="cabecera">
             <div class="logo">
-                <img src="../img/lacigarra.png" alt="">
+                <img src="../img/lacigarranavidad.png" alt="">
             </div>
             <nav class="navegacion">
                 <ul>
-                    <li><a href="#">Inicio</a></li>
-                    <li><a href="#">Reseña</a></li>
-                    <li><a href="#">Nosotros</a></li>
+                    <li><a href="../templates/inicio.html">Inicio</a></li>
+                    <!-- <li><a href="#">Reseña</a></li>
+                    <li><a href="#">Nosotros</a></li> -->
                     <li><a href="../templates/login.html"><i class="far fa-user"></i>&nbsp; Login</a></li>
                 </ul>
             </nav>
